[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/HSliderWithLabel.gd" type="Script" id=1]

[sub_resource type="StyleBoxLine" id=1]
thickness = 10

[sub_resource type="StyleBoxLine" id=2]
thickness = 10

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.25098, 0.403922, 0.6, 1 )
thickness = 10

[node name="HSliderWithLabel" type="HBoxContainer"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 15
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 500.0
margin_bottom = 79.0

[node name="HSlider" type="HSlider" parent="CenterContainer"]
margin_top = 31.0
margin_right = 500.0
margin_bottom = 47.0
rect_min_size = Vector2( 500, 0 )
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
value = 100.0

[node name="Label" type="Label" parent="."]
margin_left = 515.0
margin_right = 625.0
margin_bottom = 79.0
rect_min_size = Vector2( 110, 0 )
text = "100"

[connection signal="value_changed" from="CenterContainer/HSlider" to="." method="_on_hslider_value_changed"]
